I added images for the readme.
I removed hosting extensions from this app because they aren't used or needed.

--- a/src/appSettings.json
+++ b/src/appSettings.json
@@ -1,56 +1,4 @@
 {
-  "Syncfusion": "",
-  "Alerts": {
-    "InformationAlerts": {},
-    "WarningAlerts": {},
-    "ErrorAlerts": {
-      "Email": {
-        "To": "alert-watcher@wherever.com",
-        "From": "my-alerts@wherever.com",
-        "Subject": "%APP% Error!",
-        "Body": "An error was encountered. The error was: %MSG%"
-      }
-    },
-    "CriticalAlerts": {
-      "Email": {
-        "To": "alert-watcher@wherever.com",
-        "From": "my-alerts@wherever.com",
-        "Subject": "%APP% Critical Error!",
-        "Body": "A critical error was encountered and the %APP% application is shutting down. The error was: %MSG%"
-      },
-      "Sms": {
-        "To": "your phone number here",
-        "Body": "A critical error was encountered and the %APP% application is shutting down. The error was: %MSG%"
-      }
-    },
-    "AuditAlerts": {},
-    "DebugAlerts": {},
-    "TraceAlerts": {}
-  },
-  "Services": {
-    "Logging": {
-      "Strategy": "Serilog",
-      "Serilog": {
-        "WriteTo": [ "Console" ]
-      }
-    },
-    "Email": {
-      "Strategy": "Smtp",
-      "Smtp": {
-        "ServerAddress": "localhost",
-        "ServerPort": 25,
-        "UserName": "",
-        "Password": ""
-      }
-    },
-    "Sms": {
-      "Strategy": "Twilio",
-      "Twilio": {
-        "AccountSid": "",
-        "AuthToken": "",
-        "FromPhone": ""
-      }
-    }
-  }
+  "Syncfusion": ""
 }
 
