--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,78 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- master
+- main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
+
+variables:
+  BuildConfiguration: 'Release'
+  SolutionName: CG.Tools.CodeeMap
+  SolutionPath: 'src/$(SolutionName)'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: '5.1.0'
+    checkLatest: true
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet restore'
+  inputs:
+    command: 'restore'
+    nugetConfigPath: 'nuget.config'
+    feedsToUse: config
+    arguments: '--interactive'
+    projects: '$(SolutionPath).sln'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet build'
+  inputs:
+    command: 'build'
+    arguments: '--configuration $(BuildConfiguration)'
+    projects: '$(SolutionPath).sln'
+    
+- task: DotNetCoreCLI@2
+  displayName: "dotnet test"
+  inputs:
+    command: 'test'
+    projects: '$(SolutionPath).sln'
+    arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+    publishTestResults: true
+    nobuild: true
+
+- task: PublishCodeCoverageResults@1
+  displayName: "publish coverage"
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: 'src/**/coverage.cobertura.xml'
+    pathToSources: '$(SolutionPath)'
+
+- powershell: |
+    choco install docfx -y
+    if ($lastexitcode -ne 0) {
+      throw ("Error installing docfx")
+    }
+  displayName: "Install docfx"
+
+- powershell: |
+    docfx docfx/docfx.json
+    if ($lastexitcode -ne 0) {
+      throw ("Error generating document")
+    }
+  displayName: "Generate docs"
+
+- powershell: | 
+    $env:GIT_REDIRECT_STDERR = '2>&1'
+    git config --global credential.helper store
+    Add-Content "$HOME\.git-credentials" "https://$(GIT_PAT):x-oauth-basic@github.com`n"
+    git config --global user.email $(OP_USER_EMAIL)
+    git config --global user.name $(OP_USER)
+    git clone https://github.com/CodeGator/CG.Tools.CodeMap.git -b gh-pages origin_site -q
+    Copy-Item origin_site/.git _site -recurse
+    CD _site
+    git add -A
+    git commit -m "CI Updates [skip ci]" -q
+    git push origin gh-pages -q
+  displayName: "Publish docs"  
+
