--- a/src/CG.Tools.CodeMap.csproj
+++ b/src/CG.Tools.CodeMap.csproj
@@ -15,6 +15,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>nuget, dependency graph, code map, references, CG.Tools.CodeMap, CodeGator</PackageTags>
     <ApplicationIcon>Images\App.ico</ApplicationIcon>
+    <PackageIcon>packageDefaultIcon-50x50.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -62,22 +63,26 @@
     <None Remove="Images\zoomTo-24.png" />
     <None Remove="Images\zoomTo-32.png" />
     <None Remove="Images\zoomTo-48.png" />
+    <None Include="..\packageDefaultIcon-50x50.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CG.Core" Version="2020.6.37" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.9" />
+    <PackageReference Include="CG.Core" Version="2020.6.41" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="18.3.0.47" />
-    <PackageReference Include="Syncfusion.SfDiagram.WPF" Version="18.3.0.47" />
-    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="18.3.0.47" />
-    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="18.3.0.47" />
-    <PackageReference Include="Syncfusion.Shared.WPF" Version="18.3.0.47" />
-    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="18.3.0.47" />
+    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="18.3.0.50" />
+    <PackageReference Include="Syncfusion.SfDiagram.WPF" Version="18.3.0.50" />
+    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="18.3.0.50" />
+    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="18.3.0.50" />
+    <PackageReference Include="Syncfusion.Shared.WPF" Version="18.3.0.50" />
+    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="18.3.0.50" />
   </ItemGroup>
 
   <ItemGroup>
