--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -52,6 +52,69 @@ references:
   isSpec: "True"
   fullName: CG.Tools.CodeMap.App.OnStartup
   nameWithType: App.OnStartup
+- uid: CG.Tools.CodeMap.AssemblyLoader
+  name: AssemblyLoader
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html
+  commentId: T:CG.Tools.CodeMap.AssemblyLoader
+  fullName: CG.Tools.CodeMap.AssemblyLoader
+  nameWithType: AssemblyLoader
+- uid: CG.Tools.CodeMap.AssemblyLoader.#ctor
+  name: AssemblyLoader()
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader__ctor
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.#ctor
+  fullName: CG.Tools.CodeMap.AssemblyLoader.AssemblyLoader()
+  nameWithType: AssemblyLoader.AssemblyLoader()
+- uid: CG.Tools.CodeMap.AssemblyLoader.#ctor(System.Boolean)
+  name: AssemblyLoader(Boolean)
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader__ctor_System_Boolean_
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.#ctor(System.Boolean)
+  fullName: CG.Tools.CodeMap.AssemblyLoader.AssemblyLoader(System.Boolean)
+  nameWithType: AssemblyLoader.AssemblyLoader(Boolean)
+- uid: CG.Tools.CodeMap.AssemblyLoader.#ctor(System.String,System.Boolean)
+  name: AssemblyLoader(String, Boolean)
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader__ctor_System_String_System_Boolean_
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.#ctor(System.String,System.Boolean)
+  fullName: CG.Tools.CodeMap.AssemblyLoader.AssemblyLoader(System.String, System.Boolean)
+  nameWithType: AssemblyLoader.AssemblyLoader(String, Boolean)
+- uid: CG.Tools.CodeMap.AssemblyLoader.#ctor(System.String,System.String,System.Boolean)
+  name: AssemblyLoader(String, String, Boolean)
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader__ctor_System_String_System_String_System_Boolean_
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.#ctor(System.String,System.String,System.Boolean)
+  fullName: CG.Tools.CodeMap.AssemblyLoader.AssemblyLoader(System.String, System.String, System.Boolean)
+  nameWithType: AssemblyLoader.AssemblyLoader(String, String, Boolean)
+- uid: CG.Tools.CodeMap.AssemblyLoader.#ctor*
+  name: AssemblyLoader
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader__ctor_
+  commentId: Overload:CG.Tools.CodeMap.AssemblyLoader.#ctor
+  isSpec: "True"
+  fullName: CG.Tools.CodeMap.AssemblyLoader.AssemblyLoader
+  nameWithType: AssemblyLoader.AssemblyLoader
+- uid: CG.Tools.CodeMap.AssemblyLoader.Load(System.Reflection.AssemblyName)
+  name: Load(AssemblyName)
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader_Load_System_Reflection_AssemblyName_
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.Load(System.Reflection.AssemblyName)
+  fullName: CG.Tools.CodeMap.AssemblyLoader.Load(System.Reflection.AssemblyName)
+  nameWithType: AssemblyLoader.Load(AssemblyName)
+- uid: CG.Tools.CodeMap.AssemblyLoader.Load*
+  name: Load
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader_Load_
+  commentId: Overload:CG.Tools.CodeMap.AssemblyLoader.Load
+  isSpec: "True"
+  fullName: CG.Tools.CodeMap.AssemblyLoader.Load
+  nameWithType: AssemblyLoader.Load
+- uid: CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll(System.String)
+  name: LoadUnmanagedDll(String)
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader_LoadUnmanagedDll_System_String_
+  commentId: M:CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll(System.String)
+  fullName: CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll(System.String)
+  nameWithType: AssemblyLoader.LoadUnmanagedDll(String)
+- uid: CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll*
+  name: LoadUnmanagedDll
+  href: api/CG.Tools.CodeMap.AssemblyLoader.html#CG_Tools_CodeMap_AssemblyLoader_LoadUnmanagedDll_
+  commentId: Overload:CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll
+  isSpec: "True"
+  fullName: CG.Tools.CodeMap.AssemblyLoader.LoadUnmanagedDll
+  nameWithType: AssemblyLoader.LoadUnmanagedDll
 - uid: CG.Tools.CodeMap.Infrastructure
   name: CG.Tools.CodeMap.Infrastructure
   href: api/CG.Tools.CodeMap.Infrastructure.html
@@ -398,6 +461,19 @@ references:
   isSpec: "True"
   fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteHelpAboutCommand
   nameWithType: MainWindowViewModel.CanExecuteHelpAboutCommand
+- uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand(System.Object)
+  name: CanExecuteItemDeletingCommand(Object)
+  href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_CanExecuteItemDeletingCommand_System_Object_
+  commentId: M:CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand(System.Object)
+  fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand(System.Object)
+  nameWithType: MainWindowViewModel.CanExecuteItemDeletingCommand(Object)
+- uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand*
+  name: CanExecuteItemDeletingCommand
+  href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_CanExecuteItemDeletingCommand_
+  commentId: Overload:CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand
+  isSpec: "True"
+  fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.CanExecuteItemDeletingCommand
+  nameWithType: MainWindowViewModel.CanExecuteItemDeletingCommand
 - uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.Caption
   name: Caption
   href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_Caption
@@ -619,6 +695,19 @@ references:
   isSpec: "True"
   fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteHelpAboutCommand
   nameWithType: MainWindowViewModel.ExecuteHelpAboutCommand
+- uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand(System.Object)
+  name: ExecuteItemDeletingCommand(Object)
+  href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_ExecuteItemDeletingCommand_System_Object_
+  commentId: M:CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand(System.Object)
+  fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand(System.Object)
+  nameWithType: MainWindowViewModel.ExecuteItemDeletingCommand(Object)
+- uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand*
+  name: ExecuteItemDeletingCommand
+  href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_ExecuteItemDeletingCommand_
+  commentId: Overload:CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand
+  isSpec: "True"
+  fullName: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.ExecuteItemDeletingCommand
+  nameWithType: MainWindowViewModel.ExecuteItemDeletingCommand
 - uid: CG.Tools.CodeMap.ViewModels.MainWindowViewModel.FileCloseCommand
   name: FileCloseCommand
   href: api/CG.Tools.CodeMap.ViewModels.MainWindowViewModel.html#CG_Tools_CodeMap_ViewModels_MainWindowViewModel_FileCloseCommand
