I moved the assembly loader to it's own package.

--- a/src/CG.Tools.CodeMap.csproj
+++ b/src/CG.Tools.CodeMap.csproj
@@ -71,6 +71,7 @@
 
   <ItemGroup>
     <PackageReference Include="CG.Core" Version="2020.6.41" />
+    <PackageReference Include="CG.Runtime" Version="2020.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
@@ -83,7 +84,6 @@
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="18.3.0.50" />
     <PackageReference Include="Syncfusion.Shared.WPF" Version="18.3.0.50" />
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="18.3.0.50" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
